Fix several bugs on repagination for different zoom values of browser
- when cloning a split line, it was adding a &nbsp; at the end of 1st
  half, which messed up with calculation of line height
- when zoom !== 100%, padding-bottom for lines before page breaks were
  not enough to leave room for page break elements, needed to add some
  extra pixels for safety
- zoom 90% was splitting a line because we were using jQuery to get line
  heights, and its methods only return integers -- zooms like 90% and
  110% result on lines with non-integer line heights
- zoom 110% is getting the wrong line height for some scenarios because
  we forgot to remove some page breaks on cloned lines

--- a/static/css/iframe.css
+++ b/static/css/iframe.css
@@ -90,10 +90,6 @@
     border-radius: 0px 5px 0 0;
   }
 
-  #innerdocbody.breakPages div.cloned {
-    display: hidden;
-  }
-
   /* Removes top margin for elements after page breaks */
   #innerdocbody.breakPages div.beforePageBreak + div heading,
   #innerdocbody.breakPages div.beforePageBreak + div action,
@@ -178,8 +174,10 @@
   /* leave room for page break on line at the end of the page */
   #innerdocbody.breakPages div.beforePageBreak {
     /* All values of calc are from page break */
-    /* 40px: height; 77px: margin-top and margin-bottom; 1px: border-top and border-bottom */
-    padding-bottom: calc(40px + 77px + 77px + 1px + 1px);
+    /* 40px: height; 77px: margin-top and margin-bottom; 1px: border-top and border-bottom;
+       2px: Bug fix: some zoom values mess up with border (they don't have 1px), so we
+       need an extra px to avoid messing up with pagination */
+    padding-bottom: calc(40px + 77px + 77px + 1px + 1px + 2px);
   }
 
   /* hide ")" from 1st half of split parenthetical: */
